# openpi

./: .gitignore  PR_DESCRIPTION.md  download_dataset_and_base_model.py  launch_training.py  launch_ws_server.py  launch_ws_server_local.sh  multi_gpu_train.sh  pyproject.toml  setup.sh  setup_ws_server.sh  train.ipynb  training_config.yaml
docs/: training_time_action_conditioning.md
examples/: async_rtc_example.py
examples/rtc_inference/: compare_sync_async.py  main.py
modal_scripts/: async_rtc_client.py  client_example.py  modal_client.py  modal_serve_policy.py  non_async_modal_client.py  test_endpoint.py  v21_openpi.Dockerfile
modal_scripts/drtc/: __init__.py  action_schedule.py  drtc_modal_client.py  latency_estimation.py  lww_register.py
rtc-client/: pyproject.toml
rtc-client/rtc_client/: __init__.py  latency_estimator.py  manager.py  websocket_policy.py
scripts/: rtc_eval.py  rtc_eval_dataset.py  train_pytorch.py
src/openpi/models/: pi0.py  pi0_config.py
src/openpi/models_pytorch/: pi0_pytorch.py
src/openpi/policies/: async_rtc_processor.py  policy.py  policy_config.py  rtc_processor.py  rtc_processor_pytorch.py  sam_policy.py  ttac.py
tests/: test_ttac.py
training_configs/: B017_23_fps_experiment.yaml  B017_D000_D002_experiment.yaml  B017_D1-2_S2-4.yaml  S002-S004.yaml  b017_15_fps.yaml  experiment_b.yaml  experiment_c.yaml  experiment_d.yaml  training_config.yaml
ws_server/: Dockerfile  Dockerfile.thor  build_thor_ws_server.sh  run_thor_ws_server.sh  serve_policy.py  test_local_ws_server.py
ws_server_configs/: ws_server_config.yaml
(+2 files in other folders)
