[project]
name = "rtc-client"
version = "0.1.0"
description = "Standalone Real-Time Chunking (RTC) inference client for continuous action execution"
requires-python = ">=3.7"
dependencies = [
    "msgpack>=1.0.5",
    "numpy>=1.22.4,<2.0.0",
    "pillow>=9.0.0",
    "typing-extensions>=4.0.0",
    "websockets>=11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py37"
